--- a/views/mapa.html
+++ b/views/mapa.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-
+    <script src=
+"https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js">
+    </script>
     <title>Proyecto 2</title>
 
     <link rel="icon" type="image/png" src="/img/favicon.png" />
